# KinectTouch

./: .gitignore  CMakeLists.txt  README.md  niConfig.xml
src/: KinectTouch.cpp
src/TUIO/: TuioServer.cpp
